# NotepadE

./: .eslintrc.cjs  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  README.zh-CN.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  ci.yml
.omc/plans/: behavior-fixes.md  ui-fidelity-fixes.md
docs/plan/: 00-overview.md  01-phase-0-blockers-spikes.md  02-phase-1-walking-skeleton.md  03-phase-2-tabs-setsview.md  04-phase-3-editor-core.md  05-phase-4-fileio-session-statusbar.md  06-phase-5-settings-theme.md  07-phase-6-integrations.md  08-phase-7-visual-polish.md  09-phase-8-nonfunctional-release.md  10-appendix-keyboard-commands.md  11-signoff-and-risk-register.md  12-feature-completeness-and-gate8.md
docs/superpowers/specs/: 2026-06-11-wallpaper-mode-design.md
e2e/: broker.e2e.ts  editor-keyboard.e2e.ts  editor-undo.e2e.ts  encoding-roundtrip.e2e.ts  file-io-smoke.e2e.ts  integrations.e2e.ts  linenumber-largefile.e2e.ts  memory-close.e2e.ts  mount-smoke.e2e.ts  open-loading.e2e.ts  reveal-behavior.e2e.ts  roundtrip.e2e.ts  scroll-anchor.e2e.ts  session-parity.e2e.ts  settings-persistence.e2e.ts  settings-theme-live.e2e.ts  settings-visual.e2e.ts  statusbar-modstate.e2e.ts  statusbar-visual.e2e.ts  syntax-highlight.e2e.ts  tab-active-visibility.e2e.ts  tab-add-visible.e2e.ts  tabs-keyboard.e2e.ts  tabs-matrix.e2e.ts  tabs-visual.e2e.ts  transfer.e2e.ts  window-matrix.e2e.ts  zoom-align-probe.e2e.ts
e2e/bigdoc-harness/: index.html  main.ts  vite.config.ts
e2e/fixtures/: roundtrip-utf8.txt
e2e/helpers/: editor.ts  encodingCorpus.ts  golden.ts  launch.ts  settings.ts  tabs.ts
e2e/types/: notepads-global.d.ts
e2e/visual/baselines/: README.md
scripts/: gpu-diag.mjs  measure-nonfunctional.mjs  pa8-scan.ts  port-resw.ts  visual-diff.ts
scripts/types/: pixelmatch.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: argv_parse.rs  broker.rs  compact_overlay.rs  context_menu.rs  contract.rs  diff.rs  dragout.rs  eol.rs  file_io.rs  file_stream.rs  folder.rs  folder_watcher.rs  hash.rs  lib.rs  mru.rs  result.rs  search_url.rs  session.rs  settings.rs  settings_reset.rs  shell_integration.rs  system_codepage.rs  theme.rs  updater.rs  wallpaper.rs  window_bounds.rs  window_mgmt.rs
src-tauri/src/encoding/: crate_parity_check.rs  mod.rs  tables.rs  tests.rs
src-tauri/src/markdown/: mod.rs
src-tauri/windows/: installer.nsi
src/main/: argv-parse.test.ts  argv-parse.ts  broker.ts  compact-overlay.test.ts  compact-overlay.ts  contextMenu.ts  dragout.ts  encoding.ts  eol.ts  file-io.test.ts  file-io.ts  index.ts  ipc.ts  mru.test.ts  mru.ts  searchUrl.test.ts  searchUrl.ts  session.ts  settings-reset.test.ts  settings-reset.ts  settings.ts  shell.ts  system-codepage.test.ts  system-codepage.ts  theme.ts  wallpaper.test.ts  wallpaper.ts  win-corners.ts  window-bounds.test.ts  window-bounds.ts  window-factory.ts  window.test.ts  window.ts
src/preload/: index.ts
src/renderer/: App.tsx  AppCloseReminderDialog.test.tsx  AppCloseReminderDialog.tsx  CloseReminderDialog.test.tsx  CloseReminderDialog.tsx  UpdatePromptDialog.tsx  chrome.css  env.d.ts  index.html  main.tsx  react-jsx.d.ts
src/renderer/bridge/: index.ts
src/shared/: ipc-channels.ts  ipc-contract.ts  platform.ts
test/: setup.ts
(+211 files in other folders)
