[package]
name = "notepade"
version = "1.0.0"
description = "Tauri rewrite of NotepadE — UWP Notepads 1:1 port"
authors = ["Hoshino-Yumetsuki"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["macos-private-api", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-opener = "2.5.4"
tauri-plugin-deep-link = "2.4.9"
window-vibrancy = "0.7.1"
encoding_rs = "0.8.35"
chardetng = "1.0.0"
base64 = "0.22.1"
thiserror = "2.0.18"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
reqwest = { version = "0.13.3", default-features = false, features = [
  "rustls",
  "stream",
  "http2",
  "charset",
  "system-proxy",
  "json"
] }
oem_cp = "2.1.2"
charset = "0.1.5"
url = "2.5.8"
semver = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
similar = "3.1"
tokio = { version = "1", features = ["time", "rt"] }
comrak = { version = "0.37", default-features = false }
ammonia = "4"
regex = "1"
once_cell = "1"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Globalization",
  "Win32_Foundation",
  "UI_ViewManagement",
  "Win32_UI_Accessibility"
] }
winreg = "0.56.0"

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSWindow",
  "NSButton",
  "NSControl",
  "NSView",
  "NSResponder"
] }
